# autobotAI-integrations

./: .gitignore  Dockerfile  Notes.txt  README.md  aws_multiple_tasks_payload.py  aws_payload.py  bot.yaml  doodle.py  gcp_payload.py  gg_payload.py  github_test.py  gitlab_payload.py  kube_payload.py  payload_handler.py  pyproject.toml  requirements.txt  run_aws_python_payload.py  run_aws_steampipe.py  run_gitlab_python_payload.py  setup.py  task_executor.py  task_handler.py  temp_json_structure.py  test.py
.github/workflows/: pytest.yml  security-audit.yml
autobotAI_integrations/: __init__.py  deep_agent_schema.py  integration_schema.py  llm_utils.py  models.py  open_api_schema.py  payload_schema.py
autobotAI_integrations/handlers/: __init__.py  payload_handler.py  task_handler.py
autobotAI_integrations/integrations/: __init__.py  aws.py  gitlab.py
autobotAI_integrations/integrations/abuseipdb/: __init__.py  inventory.json  open_api.json
autobotAI_integrations/integrations/alienvault_otx/: __init__.py  code_sample.py  open_api.json  python_sdk_clients.yml
autobotAI_integrations/integrations/autobotai/: __init__.py  mcp_servers.json
autobotAI_integrations/integrations/aws/: __init__.py  code_sample.py  compliance.json  inventory.json  mcp_servers.json  python_sdk_clients.yml
autobotAI_integrations/integrations/aws_athena/: __init__.py  code_sample.py  inventory.json  python_sdk_clients.yml
autobotAI_integrations/integrations/aws_bedrock/: __init__.py  ai_evaluator_code.py  code_sample.py  inventory.json  python_sdk_clients.yml
autobotAI_integrations/integrations/aws_security_lake/: __init__.py  code_sample.py  inventory.json  python_sdk_clients.yml
autobotAI_integrations/integrations/aws_ses/: __init__.py  code_sample.py  inventtory.json  python_sdk_clients.yml
autobotAI_integrations/integrations/azure/: __init__.py  client_method_registry.json  code_sample.py  compliance.json  inventory.json  python_sdk_clients.yml
autobotAI_integrations/integrations/azure_entra_id/: __init__.py  client_method_registry.json  code_sample.py  inventory.json  open_api.json  python_sdk_clients.yml
autobotAI_integrations/integrations/azure_foundry_openai/: __init__.py  ai_evaluator_code.py  code_sample.py  inventory.json  python_sdk_clients.yml
autobotAI_integrations/integrations/bitbucket/: __init__.py
autobotAI_integrations/integrations/bitbucket_cloud/: __init__.py  code_sample.py  open_api.json  python_sdk_clients.yml
autobotAI_integrations/integrations/cloudflare/: __init__.py  code_sample.py  (+2 more)
autobotAI_integrations/patches/: __init__.py
autobotAI_integrations/utils/: __init__.py  aws_mcp_auth.py  aws_mcp_list_tools.py  boto3_helper.py  gcp_helper.py  kubernetes_helper.py  logging_config.py  open_api_parser.py  refreshable_creds.py  security_measures.py
autobotai_integrations/: autobotai_integrations.py  integration_schema.py  utils.py
autobotai_integrations/integrations/: __init__.py  gitlab.py
docs/: INTEGRATIONS.md  clients_and_resources.md
docs/abuseipdb/: Integrate.md
docs/google_api/: Integrate.md
docs/nessus/: Integrate.md
docs/slack/: Integrate.md
docs/snowflake/: Integrate.md
docs/zenduty/: Integrate.md
examples/: abuseipdb_payload.py  aws_payload.py  azure_payload.py  bedrock_payload.py  crowdstrike_identity_protection_payload.py  cyberark_identity_payload.py  cyberark_payload.py  gcp_payload.py  gg_payload.py  git_payload.py  github_payload.py  gitlab_payload.py  jira_payload.py  kube_example_v1.py  kube_payload.py  linux_payload.py  microsoft_defender_payload.py  ollama_payload.py  openai_payload.py  python_http_request_payload.py  sailpoint_payload.py  servicenow_payload.py  slack_payload.py  uptimerobot_payload.py  vt_payload.py  zscalar_workflow_automation_payload.py
scripts/: sanitize_open_api_secrets.py
tests/: conftest.py  test_aws_python_code.py  test_deep_agent_payload_interaction.py  test_gitlab.py
tests/test_handlers/: test_payload_handler.py  test_task_handler.py
tests/test_integrations/: test_abuseipdb.py  test_alienvaultOTX.py  test_autobotai.py  test_aws_athena.py  test_aws_bedrock.py  test_aws_mcp.py  test_aws_security_lake.py  test_azure_entra_id.py  test_bitbucket_cloud.py  test_cloudflare.py  test_coralogix.py  test_crowdsec.py  test_crowdstrike.py  test_crowdstrike_edr.py  test_crowdstrike_identity_protection.py  test_cyberark.py  test_cyberark_identity.py  test_cybermindr.py  test_databricks.py  test_datadog.py  test_dev_rev.py  test_elasticsearch.py  test_email.py  test_generic_rest_api.py  test_gitguardian.py  test_github.py  test_gitlab.py  test_google_api.py  test_grafana.py  test_imap.py  test_integration_service_factory.py  test_ipinfo.py  test_ipqs.py  test_ipstack.py  test_jira.py  test_m365_dlp.py  test_malwarebazar.py  test_microsoft.py  test_microsoft_defender.py  test_microsoft_office_365.py  (+39 more)
tests/test_utills/: test_logger.py  test_openapi_parser.py  test_refreshable_creds.py
(+294 files in other folders)
